# sltformer

./: chat.py  main.py  pyproject.toml
data/: tokenizer.json
