
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Koski, Matthew", email = "maccam912@gmail.com"},
]
dependencies = [
    "transformers>=4.29.2",
    "datasets>=2.12.0",
    "accelerate>=0.19.0",
    "setuptools>=67.7.2",
]
requires-python = ">=3.8"
license = {text = "MIT"}
